# backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  prometheus.yml  sonar-project.properties
.github/workflows/: codecov.yml  deploy.yml  pr.yml  scorecard.yml  sonarcloud.yml  staging.yml
sql/: dump.sql
sql/migrations/: 001_create_donations.sql  campaigns.sql  enable_dblink.sql  migrate.sql  notification.sql  transaction.sql  users.sql  wallet.sql
sql/test_migrations/: migrate.sql  notification.sql
src/: error.rs  errors.rs  lib.rs  main.rs  state.rs
src/auth/: auth.rs
src/controller/: campaign_controller.rs  donation_controller.rs  mod.rs  wallet_controller.rs
src/controller/admin/: campaign_admin_controller.rs  dashboard_controller.rs  fund_usage_controller.rs  mod.rs  notification_controller.rs  routes.rs  transaction_admin_controller.rs  user_admin_controller.rs
src/controller/auth/: auth.rs
src/controller/campaign/: auth.rs  campaign_controller.rs  campaign_controller_test.rs  mod.rs  routes.rs
src/controller/donation/: donation_controller.rs  donation_controller_test.rs  mod.rs  routes.rs
src/controller/wallet/: mod.rs  wallet_controller.rs
src/db/: mod.rs
src/model/: campaign.rs  donation.rs  mod.rs  wallet.rs
src/model/admin/: campaign_admin.rs  fund_usage.rs  mod.rs  new_campaign_subs.rs  notification.rs  statistic.rs  statistics.rs  transaction_admin.rs  user_admin.rs
src/model/campaign/: campaign.rs  campaign_test.rs  mod.rs
src/model/donation/: donation.rs  donation_test.rs  mod.rs
src/model/wallet/: transaction.rs  wallet.rs
src/repository/: campaign_repo.rs  donation_repo.rs  mod.rs  wallet_repo.rs
src/repository/admin/: campaign_admin_repo.rs  fund_usage_repo.rs  mod.rs  new_campaign_subs_repo.rs  notification_repo.rs  statistics_repo.rs  transaction_admin_repo.rs  user_admin_repo.rs
src/repository/campaign/: campaign_repository.rs  campaign_repository_test.rs  mod.rs
src/repository/donation/: donation_repository.rs  donation_repository_test.rs  donation_respository.rs  mod.rs
src/repository/wallet/: mod.rs  wallet_repository.rs  (+1 more)
src/service/: campaign_service.rs  donation_service.rs  mod.rs  wallet_service.rs
(+39 files in other folders)
