[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = "1.0.219"
sqlx = "0.8.3"
chrono = "0.4.40"
async-trait = "0.1.88"
thiserror = "2.0.12"

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
# serial_test = "0.9" # Optional: If needed for integration tests modifying shared state