[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.219"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",  # Add this feature
    "postgres",
    "chrono",
    "json"
] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
# serial_test = "0.9" # Optional: If needed for integration tests modifying shared state