[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.219"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",  # Add this feature
    "postgres",
    "chrono",
    "json",
    "bigdecimal"
] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
serde_json = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15.7"
serial_test = "3.2.0"
regex = "1.11.1"
auth = { path = "../auth" } #TODO: Adjust this later to the actual auth path during deployment.

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
mockall = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
once_cell = "1.18"
# serial_test = "0.9" # Optional: If needed for integration tests modifying shared state